# agent-runner

./: .gitignore  Makefile  README.md  agent_prompts.py  artifact_utils.py  bootstrap.ps1  bootstrap.py  bootstrap.sh  card_constants_discovery.md  check_gates.py  conftest.py  evaluator_optimizer_loops.py  materialize.py  models.py  opik_integration.py  package-lock.json  pyproject.toml  requirements.txt  run.py  run_cmds.py  run_gates.py  run_general.py  run_headless.py  runner_models.py  server_main.py  stages.py  steps.py  test_run_headless.py  test_runner.py  workflow_api.py  workflow_inputs.py
.claude/: .materialization.json  settings.json
.gemini/: .materialization.json
.github/: .materialization.json  copilot-instructions.md
agent-context/: lessons.md  mistake-rate-tracker.json  rule-recommendations.md
agent-script-source/: generate-obsidian-archive.py  init-artifact-dirs.py  init-session-log.py
agent_runner-pkg/: __init__.py  dry_run.py  models.py  repo.py  runtime.py
core/: __init__.py  agent_cmd.py  agent_prompts.py  artifact_utils.py  cli_logging.py  evaluator_optimizer_loops.py  materialize.py  materialized_paths.py  opik_integration.py  opik_tracing.py  repo_prep.py  rtk_terminal.py  run_cmds.py  run_gates.py  runner_models.py  ssl_compat.py  steps.py  ui_trace_bridge.py  user_escalation.py  workflow_inputs.py  workspace_cleanup.py
docker/: .dockerignore  entrypoint.sh  runner.Dockerfile
docs/: 01-broad-architecture.md  02-detailed-architecture.md  README.md  calibration.md  event-contract.md  harness.md  observability.md  openai-compat-setup.md  rebaseline.md  registry.md  runner-cli-contract.md  task-corpus.md  workflow-definition.md
eval/: GEMINI.md  PLUGIN_API_CHANGELOG.md  PLUGIN_AUTHORING.md  README.md  __init__.py  check_helpers.py  checks.sh  dataset_manifest.py  dataset_sources.py  init_dataset.py  metrics.py  models.py  plugin_api.py  plugin_loader.py  run_eval.py  scoring.py  story_checks.py  suite_io.py  synthesize.py  validate_calibration.py  yaml_io.py
gui/: index.html
logs/: README.md
scripts/: bootstrap.py  check-ac-coverage.py  (+3 more)
server/: __init__.py  (+13 more)
(+374 files in other folders)
